# Excel_to_Skill

./: .gitignore  AGENTS.md  DEVIATIONS.md  README.md  pyproject.toml  작업지시서 excel to skill v1.1.md  작업지시서_Excel_to_SKILL_v1.0.md
office-addin/: README.md  manifest.xml  package-lock.json  package.json  taskpane.html  tsconfig.json  vite.config.ts
prompts/: annotator_v1.md  audit_agent_v1.md  audit_aggregate_conversation_v1.md  audit_aggregate_v1.md  audit_brief_v1.md  audit_consolidate_v1.md  audit_conversation_v1.md  audit_extract_region_v1.md  audit_procedure_planning_v1.md  audit_standards_research_v1.md
schemas/: audit_account_brief.schema.json  audit_account_brief_commit.schema.json  audit_agent_response.schema.json  audit_agent_turn.schema.json  audit_aggregate_agent_turn.schema.json  audit_brief.schema.json  audit_conversation_http_turn_request.schema.json  audit_conversation_turn_result.schema.json  audit_facts.schema.json  audit_main_agent_response.schema.json  audit_procedure_planning_worker.schema.json  audit_processing_http_error.schema.json  audit_processing_job.schema.json  audit_processing_scope_selection_request.schema.json  audit_processing_status.schema.json  audit_processing_submission.schema.json  audit_raw_workbook_snapshot.schema.json  audit_scope_commit.schema.json  audit_standards_research_worker.schema.json  audit_workbook_asset_http_error_response.schema.json  audit_workbook_asset_http_status_response.schema.json  audit_workbook_asset_http_submission_response.schema.json  audit_workbook_edit_apply_manifest.schema.json  audit_workbook_edit_approval.schema.json  audit_workbook_edit_host_bootstrap.schema.json  audit_workbook_edit_http_approve_request.schema.json  audit_workbook_edit_http_claim_request.schema.json  audit_workbook_edit_preview.schema.json  (+21 more)
(+174 files in other folders)
