[project]
name = "excel-to-skill"
version = "0.1.0"
description = "Excel 통합문서를 근거(셀 좌표) 추적 가능한 스킬 패키지로 변환하는 CLI 도구"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1,<3.2",
    "xlrd>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
annotate = ["anthropic", "langsmith"]

[project.scripts]
excel-to-skill = "excel_to_skill.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_to_skill"]
