[project]
name = "excel-to-skill"
version = "0.1.0"
description = "회계감사조서 Excel을 근거 추적 가능한 agent-ready brief로 준비하는 CLI"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1,<3.2",
    "xlrd>=2.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
annotate = ["anthropic", "langsmith"]
prepare = [
    "anthropic",
    "langsmith",
    "fastmcp==3.4.3",
    "mcp>=1.28.1,<1.29",
]
graph = [
    "langchain-anthropic>=1.4.8,<1.5",
    "langgraph>=1.2.9,<1.3",
    "langgraph-checkpoint-sqlite>=3.1,<3.2",
]

[project.scripts]
excel-to-skill = "excel_to_skill.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_to_skill"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "excel_to_skill/schemas"
"prompts" = "excel_to_skill/prompts"
